added integration tests