@@ -1,17 +1,22 @@
 package DAOTest;
 
 import DataAccesObjects.Connection;
+import DataAccesObjects.Employee.WorkersDAO;
 import Domain.Employee.*;
 import Domain.Enums.TempLevel;
 import Domain.Enums.WindowType;
 import Domain.Enums.weightType;
 import Domain.Transfer.Transfer;
+import org.junit.Assert;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.sql.SQLException;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class IntegrationBetweenEmployeeAndTransfer {
 
@@ -69,21 +74,6 @@ public class IntegrationBetweenEmployeeAndTransfer {
         wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day2,555,2);
         wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day2,666,2);
 
-        wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day3,555,2);
-        wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day3,666,2);
-
-        wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day4,555,2);
-        wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day4,666,2);
-
-        wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day5,555,2);
-        wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day5,666,2);
-
-        wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day6,555,2);
-        wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day6,666,2);
-
-        wscontroller.addtoexistingweeklyshift(1,2024,4, WindowType.day7,555,2);
-        wscontroller.addtoexistingweeklyshift(1,2024,4,WindowType.day7,666,2);
-
         wscontroller.addtoexistingweeklyshift(1,2024,5, WindowType.day3,555,2);
         wscontroller.addtoexistingweeklyshift(1,2024,5,WindowType.day3,666,2);
 
@@ -106,31 +96,83 @@ public class IntegrationBetweenEmployeeAndTransfer {
 
     @AfterEach
     void tearDown() {
-       Connection.DeleteRows();
+       //Connection.DeleteRows();
     }
 
 
     @Test
     void getAvailableDriversTest() throws SQLException {
-        //Connection.databaseReboot();
-        //List<Driver> driversForDay1 = driverControllerTest.getAvailableDrivers(11, 1999, WindowType.day1);
-        //List<Integer> IdsListFromTrucksTable1 = transferTrucksDAO.get(transfer1.getTruckLicenseNumber()).stream().map(Transfer::getTransferId).toList();
+        List<Driver> driversForDay1 = driverControllerTest.getAvailableDrivers(1, 2024, WindowType.day1);
+        List<Integer> driversIds1 = driversForDay1.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+
+        //should have drivers 111 and 222 only
+        Assertions.assertTrue(driversIds1.contains(111));
+        Assertions.assertTrue(driversIds1.contains(222));
+        // 333 and 444 shouldnt be in this list
+        Assertions.assertFalse(driversIds1.contains(333));
+        Assertions.assertFalse(driversIds1.contains(444));
+
+        //check for day 3, all of them should be in the returned list
+        List<Driver> driversForDay3 = driverControllerTest.getAvailableDrivers(1, 2024, WindowType.day3);
+        List<Integer> driversIds3 = driversForDay3.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+        //should have drivers 111, 222, 333, 444
+        Assertions.assertTrue(driversIds3.contains(111));
+        Assertions.assertTrue(driversIds3.contains(222));
+        Assertions.assertTrue(driversIds3.contains(333));
+        Assertions.assertTrue(driversIds3.contains(444));
     }
 
     @Test
-    void findDriverTest1()
-    {
-        //todo: complete
+    void findDriverTest1() throws SQLException {
+        //check for day3 with regular temp capacity. should return all of them
+        List<Driver> regDriverDay3 = driverControllerTest.findDriver(TempLevel.regular, 1, 2024, WindowType.day3);
+        List<Integer> driversIdsDay3 = regDriverDay3.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+        //should have drivers 111, 222, 333, 444
+        Assertions.assertTrue(driversIdsDay3.contains(111));
+        Assertions.assertTrue(driversIdsDay3.contains(222));
+        Assertions.assertTrue(driversIdsDay3.contains(333));
+        Assertions.assertTrue(driversIdsDay3.contains(444));
+
+        //check for day1 with cold temp capacity. should return only 111
+        List<Driver> regDriverDay1 = driverControllerTest.findDriver(TempLevel.cold, 1, 2024, WindowType.day1);
+        List<Integer> driversIdsDay1 = regDriverDay1.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+
+        //should return only 111, because 222 temp is only regular
+        Assertions.assertTrue(driversIdsDay1.contains(111));
+        Assertions.assertFalse(driversIdsDay1.contains(222));
+        Assertions.assertFalse(driversIdsDay1.contains(333));
+        Assertions.assertFalse(driversIdsDay1.contains(444));
     }
 
     @Test
-    void findDriverTest2()
-    {
-        //todo: complete
+    void findDriverTest2() throws SQLException {
+        //in this test none of the drivers should be returned
+        List<Driver> regDriverDay1 = driverControllerTest.findDriver(TempLevel.frozen, 1, 2024, WindowType.day1);
+        List<Integer> driversIdsDay1 = regDriverDay1.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+
+        //should return none
+        Assertions.assertTrue(driversIdsDay1.isEmpty());
+
+        //in this test too, none of the drivers should be returned
+        List<Driver> regDriverDay4 = driverControllerTest.findDriver(TempLevel.frozen, 1, 2024, WindowType.day4);
+        List<Integer> driversIdsDay4 = regDriverDay4.stream().map(urEntity -> urEntity.getId()).collect(Collectors.toList());
+
+        //should return none
+        Assertions.assertTrue(driversIdsDay4.isEmpty());
     }
     @Test
-    void doIHaveDriver() throws SQLException {
-        wscontroller.doIHaveStokeForTheShipment(1,2024,4);
+    void doIHaveStoke() throws SQLException {
+
+        //suppose to have workers in day1, day2
+        Assertions.assertTrue(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day1));
+        Assertions.assertTrue(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day2));
+
+        //shouldnt have any of these days in the windowTypes available
+        Assertions.assertFalse(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day3));
+        Assertions.assertFalse(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day4));
+        Assertions.assertFalse(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day5));
+        Assertions.assertFalse(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day6));
+        Assertions.assertFalse(wscontroller.doIHaveStokeForTheShipment(1,2024,4).contains(WindowType.day7));
     }
 
 }
